infra/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovation-engine-api-ingress
spec:
  rules:
    - host: innovation-engine-api.localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: innovation-engine-api
                port:
                  number: 80
